@@ -345,16 +345,7 @@ ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) \
 	$(top_srcdir)/rtai-core/config/autoconf/mkinstalldirs
 CONFIG_HEADER = rtai_config.h
-CONFIG_CLEAN_FILES = rtai-doc/GNUmakefile rtai-doc/doxygen/GNUmakefile \
-	rtai-doc/doxygen/Doxyfile rtai-doc/docbook/GNUmakefile \
-	rtai-doc/docbook/catalog \
-	rtai-doc/docbook/custom-stylesheets/GNUmakefile \
-	rtai-doc/docbook/custom-stylesheets/xsl/GNUmakefile \
-	rtai-doc/docbook/custom-stylesheets/xsl/common/GNUmakefile \
-	rtai-doc/docbook/custom-stylesheets/xsl/fo/GNUmakefile \
-	rtai-doc/docbook/custom-stylesheets/xsl/html/GNUmakefile \
-	rtai-doc/docbook/custom-stylesheets/xsl/html/chunk.xsl \
-	rtai-doc/docbook/docbook-test/GNUmakefile
+CONFIG_CLEAN_FILES =
 DIST_SOURCES =
 
 RECURSIVE_TARGETS = info-recursive dvi-recursive pdf-recursive \
@@ -411,30 +402,6 @@ $(srcdir)/rtai_config.h.in: @MAINTAINER_MODE_TRUE@ $(top_srcdir)/configure.in $(
 
 distclean-hdr:
 	-rm -f rtai_config.h stamp-h1
-rtai-doc/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/GNUmakefile.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-rtai-doc/doxygen/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/doxygen/GNUmakefile.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-rtai-doc/doxygen/Doxyfile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/doxygen/Doxyfile.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-rtai-doc/docbook/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/GNUmakefile.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-rtai-doc/docbook/catalog: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/catalog.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-rtai-doc/docbook/custom-stylesheets/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/custom-stylesheets/GNUmakefile.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-rtai-doc/docbook/custom-stylesheets/xsl/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/custom-stylesheets/xsl/GNUmakefile.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-rtai-doc/docbook/custom-stylesheets/xsl/common/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/custom-stylesheets/xsl/common/GNUmakefile.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-rtai-doc/docbook/custom-stylesheets/xsl/fo/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/custom-stylesheets/xsl/fo/GNUmakefile.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-rtai-doc/docbook/custom-stylesheets/xsl/html/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/custom-stylesheets/xsl/html/GNUmakefile.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-rtai-doc/docbook/custom-stylesheets/xsl/html/chunk.xsl: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/custom-stylesheets/xsl/html/chunk.xsl.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-rtai-doc/docbook/docbook-test/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/docbook-test/GNUmakefile.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
 
 mostlyclean-libtool:
 	-rm -f *.lo
@@ -586,7 +553,7 @@ distcleancheck_listfiles = find . -type f -print
 distdir: $(DISTFILES)
 	$(am__remove_distdir)
 	mkdir $(distdir)
-	$(mkinstalldirs) $(distdir)/rtai-core/config/autoconf $(distdir)/rtai-core/scripts $(distdir)/rtai-doc $(distdir)/rtai-doc/docbook $(distdir)/rtai-doc/docbook/custom-stylesheets $(distdir)/rtai-doc/docbook/custom-stylesheets/xsl $(distdir)/rtai-doc/docbook/custom-stylesheets/xsl/common $(distdir)/rtai-doc/docbook/custom-stylesheets/xsl/fo $(distdir)/rtai-doc/docbook/custom-stylesheets/xsl/html $(distdir)/rtai-doc/docbook/docbook-test $(distdir)/rtai-doc/doxygen
+	$(mkinstalldirs) $(distdir)/rtai-core/config/autoconf $(distdir)/rtai-core/scripts $(distdir)/rtai-doc/docbook $(distdir)/rtai-doc/docbook/custom-stylesheets/xsl/html $(distdir)/rtai-doc/doxygen
 	@srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`; \
 	topsrcdirstrip=`echo "$(top_srcdir)" | sed 's|.|.|g'`; \
 	list='$(DISTFILES)'; for file in $$list; do \
