@@ -320,12 +320,12 @@ target_alias = @target_alias@
 
 @CONFIG_MIPS_TRUE@ARCHDIR = mips
 
-@CONFIG_PPC_TRUE@ARCHDIR = ppc
+@CONFIG_ARM_TRUE@ARCHDIR = arm
 @CONFIG_X86_TRUE@ARCHDIR = i386
 
-@CONFIG_CRIS_TRUE@ARCHDIR = cris
+@CONFIG_PPC_TRUE@ARCHDIR = ppc
 
-@CONFIG_ARM_TRUE@ARCHDIR = arm
+@CONFIG_CRIS_TRUE@ARCHDIR = cris
 
 SUBDIRS = $(ARCHDIR)
 subdir = rtai-core/arch
@@ -342,7 +342,7 @@ RECURSIVE_TARGETS = info-recursive dvi-recursive pdf-recursive \
 	installdirs-recursive install-recursive uninstall-recursive \
 	check-recursive installcheck-recursive
 DIST_COMMON = $(srcdir)/GNUmakefile.in GNUmakefile.am
-DIST_SUBDIRS = mips ppc i386 cris arm
+DIST_SUBDIRS = mips arm i386 ppc cris
 all: all-recursive
 
 .SUFFIXES:
