@@ -340,13 +340,13 @@ DBX_BUILD_ROOT = $(top_builddir)/$(DBX_DOC_ROOT)
 DBX_DIST_ROOT = $(dbx_top_distdir)/$(DBX_GEN_DOC_ROOT)
 
 DBX_XSLTPROC_FLAGS = --catalogs --xinclude $(DBX_MAYBE_NONET)
+@DBX_DOC_TRUE@DBX_HTML_TRANSFORM = sed "s,\(src\|href\)=\"$(esc_html_srcroot),\1=\"..,g"
 
 @DBX_DOC_FALSE@DBX_HTML_TRANSFORM = cat
-@DBX_DOC_TRUE@DBX_HTML_TRANSFORM = sed "s,\(src\|href\)=\"$(esc_html_srcroot),\1=\"..,g"
-@DBX_DOC_FALSE@HTML_DOCSDIR = $(top_srcdir)/$(DBX_GEN_DOC_ROOT)/html/
 @DBX_DOC_TRUE@HTML_DOCSDIR = ./
-@DBX_DOC_FALSE@PDF_DOCSDIR = $(top_srcdir)/$(DBX_GEN_DOC_ROOT)/pdf/
+@DBX_DOC_FALSE@HTML_DOCSDIR = $(top_srcdir)/$(DBX_GEN_DOC_ROOT)/html/
 @DBX_DOC_TRUE@PDF_DOCSDIR = ./
+@DBX_DOC_FALSE@PDF_DOCSDIR = $(top_srcdir)/$(DBX_GEN_DOC_ROOT)/pdf/
 @DBX_ABS_SRCDIR_FALSE@@DBX_DOC_TRUE@html_srcroot = ../$(DBX_SRC_ROOT)
 
 # How to find the Docbook XML source root from an HTML subdir depends on whether
