@@ -9,7 +9,7 @@ liblatency_rt_a_SOURCES = latency-module.c
 if CONFIG_KBUILD
 latency_rt.ko: @RTAI_KBUILD_ENV@
 latency_rt.ko: $(liblatency_rt_a_SOURCES)
-	@RTAI_KBUILD_CMD@
+	@RTAI_KBUILD_CMD@ rtai_extradef="@RTAI_FP_CFLAGS@"
 
 clean-local:
 	@RTAI_KBUILD_CLEAN@
