@@ -9,7 +9,7 @@ libpreempt_rt_a_SOURCES = preempt-module.c
 if CONFIG_KBUILD
 preempt_rt.ko: @RTAI_KBUILD_ENV@
 preempt_rt.ko: $(libpreempt_rt_a_SOURCES)
-	@RTAI_KBUILD_CMD@
+	@RTAI_KBUILD_CMD@ rtai_extradef="@RTAI_FP_CFLAGS@"
 
 clean-local:
 	@RTAI_KBUILD_CLEAN@
