@@ -729,7 +729,7 @@ uninstall-am: uninstall-info-am uninstall-testPROGRAMS
 
 @CONFIG_KBUILD_TRUE@preempt_rt.ko: @RTAI_KBUILD_ENV@
 @CONFIG_KBUILD_TRUE@preempt_rt.ko: $(libpreempt_rt_a_SOURCES)
-@CONFIG_KBUILD_TRUE@	@RTAI_KBUILD_CMD@
+@CONFIG_KBUILD_TRUE@	@RTAI_KBUILD_CMD@ rtai_extradef="@RTAI_FP_CFLAGS@"
 
 @CONFIG_KBUILD_TRUE@clean-local:
 @CONFIG_KBUILD_TRUE@	@RTAI_KBUILD_CLEAN@
