@@ -642,7 +642,7 @@ uninstall-am: uninstall-info-am
 
 @CONFIG_KBUILD_TRUE@switches_rt.ko: @RTAI_KBUILD_ENV@
 @CONFIG_KBUILD_TRUE@switches_rt.ko: $(libswitches_rt_a_SOURCES)
-@CONFIG_KBUILD_TRUE@	@RTAI_KBUILD_CMD@
+@CONFIG_KBUILD_TRUE@	@RTAI_KBUILD_CMD@ rtai_extradef="@RTAI_FP_CFLAGS@"
 
 @CONFIG_KBUILD_TRUE@clean-local:
 @CONFIG_KBUILD_TRUE@	@RTAI_KBUILD_CLEAN@
