@@ -1,6 +1,7 @@
 EXTRA_CFLAGS += -I$(rtai_srctree)/rtai-core/include \
 		-I$(src)/../../../rtai-core/include \
 		-I$(src)/../../.. \
+		$(rtai_extradef) \
 		-D__IN_RTAI__
 
 obj-m += switches_rt.o
